# docs/swagger.json
@@ -16,7 +16,7 @@
                 "tags": [
                     "UserProfileHandler(나의 프로필 정보 가져오기)"
                 ],
-                "summary": "계정주소, 닉네임을 입력합니다.",
+                "summary": "계정주소를 입력합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -82,6 +82,52 @@
                 }
             }
         },
+        "/v01/badge/issue": {
+            "post": {
+                "description": "위도, 경도를 입력받고 해당하는 나라의 리소스(ipfs uri, nft metadata)를 참고해서 뱃지를 발급해줍니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CreateBadge(뱃지 발급)"
+                ],
+                "summary": "지갑계정, 위도, 경도를 입력해줍니다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "walletAccount",
+                        "name": "walletAccount",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "latitude",
+                        "name": "latitude",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "longitude",
+                        "name": "longitude",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v01/badge/user": {
             "get": {
                 "description": "사용자 위치를 참고해서 뱃지를 발급하는 함수",
@@ -94,7 +140,7 @@
                 "tags": [
                     "GetMyBadge(나의 뱃지 가져오기)"
                 ],
-                "summary": "내가 발급한 뱃지를 가져오는 함수",
+                "summary": "지갑계정을 입력해줍니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -126,7 +172,7 @@
                 "tags": [
                     "GetAllTrip(전체 여행계획 가져오기)"
                 ],
-                "summary": "모든 여행계획을 가져오는 함수",
+                "summary": "모든 여행계획을 가져온다.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -149,12 +195,77 @@
                 "tags": [
                     "GetMyTrip(나의 여행계획 가져오기)"
                 ],
-                "summary": "나의 여행계획을 가져오는 함수",
+                "summary": "지갑계정을 입력한다.",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "walletAccount",
                         "name": "walletAccount",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "days에는 day1, day2단위로 아이템이 있고 각 day1별로 시간과 imtes가 있으며 각각 여행시작시간, 종료시간, 이미지, 타이틀, 설명, 메모등을 입력할 수 있습니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CreateTripPlan(나의 여행계획표 생성하기)"
+                ],
+                "summary": "지갑계정, 제목, 나라, 출발날짜, 도착날짜 등을 입력합니다. days는 아이템을 담은 배열입니다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "walletAccount",
+                        "name": "walletAccount",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "travelTitle",
+                        "name": "travelTitle",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tripCountry",
+                        "name": "tripCountry",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tripDeparture",
+                        "name": "tripDeparture",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tripArrival",
+                        "name": "tripArrival",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "days",
+                        "name": "days",
                         "in": "path",
                         "required": true
                     }
@@ -181,7 +292,7 @@
                 "tags": [
                     "SearchTrip(여행계획 단어단위 검색하기)"
                 ],
-                "summary": "여행계획을 검색하는 API",
+                "summary": "q에 검색하고자 하는 키워드를 입력한다.",
                 "parameters": [
                     {
                         "type": "string",
